Added employee-churn EDA

--- a/employee-churn/employee-churn-neural-net-models.ipynb
+++ b/employee-churn/employee-churn-neural-net-models.ipynb
@@ -48,6 +48,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1119,9 +1120,9 @@
    "summary": "Deeplearning in 1..2..3"
   },
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
