Added youtube-spam-detection notebook

--- a/youtube-spam-detection/YouTube-Spam-Collection-v1/youtube-comments-spam-detection.ipynb
+++ b/youtube-spam-detection/YouTube-Spam-Collection-v1/youtube-comments-spam-detection.ipynb
@@ -1176,13 +1176,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "We have not removed any stop-words and still achieved great accuracy. An interesting follow-up would be to remove stop-words and check\n",
+    "if it has any impact on the performance.\n",
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
   },
   {
    "cell_type": "code",
@@ -1191,9 +1199,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "We have not removed any stop-words and still achieved great accuracy. An interesting experi"
-   ]
+   "source": []
   }
  ],
  "metadata": {
